# rust-opengl-playground

./: .projectile  Cargo.toml  README.md  build.rs
assets/shaders/: triangle.frag  triangle.vert
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
lib/render_gl_derive/: Cargo.toml
lib/render_gl_derive/src/: lib.rs
src/: debug.rs  main.rs  rectangle.rs  render_gl.rs  resources.rs  triangle.rs  triangle.vert
src/render_gl/: buffer.rs  color_buffer.rs  data.rs  shader.rs  viewport.rs
