[package]
name = "opengl"
version = "0.1.0"
authors = ["Robert Krahn <robert.krahn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
walkdir = "*"

[dependencies]
sdl2 = "0.32.2"
gl = { path = "lib/gl" }
failure = "0.1.5"
render_gl_derive = { path = "lib/render_gl_derive" }

[features]
# default = ["gl_debugr"]
gl_debug = ["gl/debug"]
