[package]
name = "opengl"
version = "0.1.0"
authors = ["Robert Krahn <robert.krahn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
walkdir = "*"

[dependencies]
sdl2 = { version = "0.32.2", features = ["bundled", "static-link"] }
vec-2-10-10-10 = "0.1.2"
nalgebra = "0.18.1"
failure = "0.1.5"
gl = { path = "lib/gl" }
render_gl_derive = { path = "lib/render_gl_derive" }

[features]
# default = ["gl_debugr"]
gl_debug = ["gl/debug"]
