[package]
name = "opengl"
version = "0.1.0"
authors = ["Robert Krahn <robert.krahn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
walkdir = "*"

[dependencies]
# housekeeping
failure = "0.1.5"

# graphics
sdl2 = { version = "0.32.2", features = ["bundled", "static-link"] }
nalgebra = "0.18.1"

# gl
vec-2-10-10-10 = "0.1.2"
gl = { path = "lib/gl" }
render_gl_derive = { path = "lib/render_gl_derive" }

# file watcher
crossbeam-channel = "0.4"
notify = "=5.0.0-pre.1"


[features]
# default = ["gl_debug"]
gl_debug = ["gl/debug"]
